--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
+    "icons": "^1.0.0",
     "link": "^2.1.0",
-    "react": "18.2.0",
+    "native": "^0.3.3",
+    "react": "^18.2.0",
     "react-native": "^0.73.6",
     "react-native-calendars": "^1.1304.1",
     "react-native-elements": "^3.4.3",
@@ -27,7 +29,8 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-windows": "^0.73.10"
+    "react-native-windows": "^0.73.10",
+    "vector": "^0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
