--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "link": "^2.1.0",
     "native": "^0.3.3",
     "react": "^18.2.0",
+    "react-google-calendar-api": "^2.3.0",
     "react-native": "^0.73.6",
     "react-native-calendars": "^1.1304.1",
     "react-native-elements": "^3.4.3",
@@ -29,6 +30,7 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "^13.8.1",
     "react-native-windows": "^0.73.10",
     "vector": "^0.0.4"
   },
